--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Index</title>
+    <link rel="stylesheet" type="text/css" href="staticstyle.css" />
 </head>
 <body>
 <div class="sidebar">
@@ -16,6 +17,10 @@
     <a href="guide.html">Guide</a>
     <a href="index.html">Index</a>
 </div>
-
+<article class="container">
+    <h1>Welcome to Open Books</h1>
+    <a href="login.html">Sign in</a>
+    <a href="register.html">Sign up</a>
+</article>
 </body>
 </html>
