--- a/index.html
+++ b/index.html
@@ -6,21 +6,10 @@
     <link rel="stylesheet" type="text/css" href="staticstyle.css" />
 </head>
 <body>
-<div class="sidebar">
-    <a href="public/myBooks.php">Home</a>
-    <a href="booksAll.html">All Books</a>
-    <a href="authors.html">Authors</a>
-    <a href="clasics.html">Clasics</a>
-    <a href="bestSellings.html">Best Sellings</a>
-    <a href="series.html">Series</a>
-    <a href="events.html">Events</a>
-    <a href="guide.html">Guide</a>
-    <a href="index.html">Index</a>
-</div>
-<article class="container">
-    <h1>Welcome to Open Books</h1>
-    <a href="login.html">Sign in</a>
-    <a href="register.html">Sign up</a>
+<h1>Welcome to Open Books</h1>
+<article class="botones">
+<a id="boton" href="login.html">Sign in</a>
+<a id="boton" href="register.html">Sign up</a>
 </article>
 </body>
 </html>
