[error loading xml] problem with ajax library

--- a/booksAll.html
+++ b/booksAll.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Book List</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="staticstyle.css"/>
     <script src="public/loadXML.js"></script>
     <script src="public/dragAndDrop.js"></script>
