[alert on drop] removed img to check alert

--- a/booksAll.html
+++ b/booksAll.html
@@ -20,7 +20,7 @@
     <a href="guide.html">Guide</a>
     <a href="index.html">Index</a>
     <div ondragover="operationDragAndDropCurrent.allowDrop(event)" ondrop="operationDragAndDropCurrent.drop(event)">
-        <img id="heart" src="static/img/heart.png" alt="heart">
+        <!--<img id="heart" src="static/img/heart.png" alt="heart">-->
     </div>
 </div>
 <article class="container">
