[alert on drop]

--- a/booksAll.html
+++ b/booksAll.html
@@ -19,7 +19,7 @@
     <a href="events.html">Events</a>
     <a href="guide.html">Guide</a>
     <a href="index.html">Index</a>
-    <div ondragover="operationDragAndDropCurrent.allowDrop(event)" ondrop="operationDragAndDropCurrent.drop(event)">
+    <div style="border: 2px solid grey" ondragover="OperationDragAndDrop.allowDrop(event)" ondrop="operationDragAndDropCurrent.drop(event)">
         <!--<img id="heart" src="static/img/heart.png" alt="heart">-->
     </div>
 </div>
