--- a/booksAll.html
+++ b/booksAll.html
@@ -21,6 +21,7 @@
     <a href="index.html">Index</a>
     <div ondragover="OperationDragAndDrop.allowDrop(event)" ondrop="operationDragAndDropCurrent.drop(event)"
          style="border: 2px solid grey; height: 5em; width: 5em">
+        <img id="heart" src="static/img/heart.png" alt="heart">
     </div>
 </div>
 <article class="container">
