--- a/booksAll.html
+++ b/booksAll.html
@@ -19,8 +19,7 @@
     <a href="events.html">Events</a>
     <a href="guide.html">Guide</a>
     <a href="index.html">Index</a>
-    <div ondragover="OperationDragAndDrop.allowDrop(event)" ondrop="operationDragAndDropCurrent.drop(event)"
-         style="border: 2px solid grey; height: 5em; width: 5em">
+    <div ondragover="OperationDragAndDrop.allowDrop(event)" ondrop="operationDragAndDropCurrent.drop(event)">
         <img id="heart" src="static/img/heart.png" alt="heart">
     </div>
 </div>
