--- a/bestSellings.html
+++ b/bestSellings.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Best-Selling Books 2019</title>
+    <title>Best-Sellers</title>
     <link rel="stylesheet" type="text/css" href="staticstyle.css" />
 </head>
 <body>
@@ -11,11 +11,11 @@
     <a href="booksAll.html">All Books</a>
     <a href="authors.html">Authors</a>
     <a href="clasics.html">Clasics</a>
-    <a href="bestSellings.html">Best Sellings</a>
+    <a class="active" href="bestSellings.html">Best Sellings</a>
     <a href="series.html">Series</a>
     <a href="events.html">Events</a>
+    <a href="shops.html">Shops</a>
     <a href="guide.html">Guide</a>
-    <a href="index.html">Index</a>
 </div>
 <article class="container">
 <h1>Best-Selling Books 2019</h1>
