--- a/booksAll.html
+++ b/booksAll.html
@@ -11,14 +11,14 @@
 <body>
 <div class="sidebar">
     <a href="public/myBooks.php">Home</a>
-    <a href="booksAll.html">All Books</a>
+    <a class="active" href="booksAll.html">All Books</a>
     <a href="authors.html">Authors</a>
     <a href="clasics.html">Clasics</a>
     <a href="bestSellings.html">Best Sellings</a>
     <a href="series.html">Series</a>
     <a href="events.html">Events</a>
+    <a href="shops.html">Shops</a>
     <a href="guide.html">Guide</a>
-    <a href="index.html">Index</a>
     <div ondragover="operationDragAndDropCurrent.allowDrop(event)" ondrop="operationDragAndDropCurrent.drop(event)">
         <img id="heart" src="static/img/heart.png" alt="heart">
     </div>
