--- a/guide.html
+++ b/guide.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Guide</title>
+    <link rel="stylesheet" type="text/css" href="staticstyle.css" />
 </head>
 <body>
 <div class="sidebar">
@@ -13,8 +14,8 @@
     <a href="bestSellings.html">Best Sellings</a>
     <a href="series.html">Series</a>
     <a href="events.html">Events</a>
-    <a href="guide.html">Guide</a>
-    <a href="index.html">Index</a>
+    <a href="shops.html">Shops</a>
+    <a class="active" href="guide.html">Guide</a>
 </div>
 
 </body>
