--- a/series.html
+++ b/series.html
@@ -12,10 +12,10 @@
     <a href="authors.html">Authors</a>
     <a href="clasics.html">Clasics</a>
     <a href="bestSellings.html">Best Sellings</a>
-    <a href="series.html">Series</a>
+    <a class="active" href="series.html">Series</a>
     <a href="events.html">Events</a>
+    <a href="shops.html">Shops</a>
     <a href="guide.html">Guide</a>
-    <a href="index.html">Index</a>
 </div>
 <article class="container">
 <h1>Best Selling Series</h1>
