--- a/authors.html
+++ b/authors.html
@@ -9,13 +9,13 @@
 <div class="sidebar">
     <a href="public/myBooks.php">Home</a>
     <a href="booksAll.html">All Books</a>
-    <a href="authors.html">Authors</a>
+    <a class="active" href="authors.html">Authors</a>
     <a href="clasics.html">Clasics</a>
     <a href="bestSellings.html">Best Sellings</a>
     <a href="series.html">Series</a>
     <a href="events.html">Events</a>
+    <a href="shops.html">Shops</a>
     <a href="guide.html">Guide</a>
-    <a href="index.html">Index</a>
 </div>
 <article class="container">
 <h1>Top Ten Authors of All Time</h1>
