--- a/clasics.html
+++ b/clasics.html
@@ -10,12 +10,12 @@
     <a href="public/myBooks.php">Home</a>
     <a href="booksAll.html">All Books</a>
     <a href="authors.html">Authors</a>
-    <a href="clasics.html">Clasics</a>
+    <a class="active" href="clasics.html">Clasics</a>
     <a href="bestSellings.html">Best Sellings</a>
     <a href="series.html">Series</a>
     <a href="events.html">Events</a>
+    <a href="shops.html">Shops</a>
     <a href="guide.html">Guide</a>
-    <a href="index.html">Index</a>
 </div>
 <article class="container">
 <h1>Popular Classic Books</h1>
