--- a/authors.html
+++ b/authors.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Authors</title>
+    <link rel="shortcut icon" href="static/img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="staticstyle.css" />
 </head>
 <body>
