--- a/events.html
+++ b/events.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>s</title>
+    <title>Events</title>
+    <link rel="shortcut icon" href="static/img/favicon.ico" />
 </head>
 <body>
-
+<div class="sidebar">
+    <a href="public/myBooks.php">Home</a>
+    <a href="booksAll.html">All Books</a>
+    <a href="authors.html">Authors</a>
+    <a href="clasics.html">Clasics</a>
+    <a href="bestSellings.html">Best Sellings</a>
+    <a href="series.html">Series</a>
+    <a class="active" href="events.html">Events</a>
+    <a href="shops.html">Shops</a>
+    <a href="guide.html">Guide</a>
+</div>
 </body>
 </html>
