--- a/shops.html
+++ b/shops.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Shops</title>
+    <link rel="shortcut icon" href="static/img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="staticstyle.css" />
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDx5elwS0TL6JHuqgqxdcgTt2BRC-WsXTE&callback=initMap">
