--- a/booksAll.html
+++ b/booksAll.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Book List</title>
+    <link rel="shortcut icon" href="static/img/favicon.ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="staticstyle.css"/>
     <script src="public/loadXML.js"></script>
