--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Events</title>
     <link rel="shortcut icon" href="static/img/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="staticstyle.css" />
 </head>
 <body>
 <div class="sidebar">
