--- a/guide.html
+++ b/guide.html
@@ -27,6 +27,7 @@
         version of Good Reads so to say.</p>
         <p>It is divided in two main sections: blog entries and "My Library". Blog entries are pages containing general information
         on known books. "My Library" contains the list of all books available, your favorite ones and shops nearby.</p>
+        <p>Deployed using Microsoft Azure. Took me a while so appreciate it as much as you can, my self esteem needs it.</p>
         <p>If you want to know how to use it, keep reading!</p>
     </section>
     <section>
