--- a/guide.html
+++ b/guide.html
@@ -22,8 +22,9 @@
     <h1>Quick User Guide</h1>
     <section>
         <h2 class="banner">What is OpenBooks?</h2>
-        <p>OpenBooks is a website implemented using almost all known technologies developed for making websites. It simulates
-        an online bookstore or library, where you can like books and check any kind of information about them. Extra simple
+        <p>OpenBooks is a website implemented using almost all known technologies developed for making websites, following
+            all best practices and standards (everything is valid according to W3C). It simulates an online bookstore or
+            library, where you can like books and check any kind of information about them. Extra simple
         version of Good Reads so to say.</p>
         <p>It is divided in two main sections: blog entries and "My Library". Blog entries are pages containing general information
         on known books. "My Library" contains the list of all books available, your favorite ones and shops nearby.</p>
