--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <h1>Welcome to Open Books</h1>
 <article class="botones">
-<a id="boton" href="login.html">Sign in</a>
-<a id="boton" href="register.html">Sign up</a>
+<a class="boton" href="login.html">Sign in</a>
+<a class="boton" href="register.html">Sign up</a>
 </article>
 </body>
 </html>
