insert into database and locate shops

--- a/events.html
+++ b/events.html
@@ -31,7 +31,7 @@
         of whom I have already spoken to you some time around, but it could not be. This year will be held from July 17
         to 20, and I'm sure that the guests will remain luxury . I still do not know if I will attend, but if it suits
         you, do not let it go! They say that the one who repeats.</p>
-        <a href="https://celsius232.es/">More info</a>
+        <a class="link-info" href="https://celsius232.es/">More info</a>
     <h2>Malaga 451: The Night of the Books (Malaga, Andalucia)</h2>
     <p>On the route of Spanish free literary festivals, we arrive in Andalusia, specifically in Malaga. Writers,
         booksellers, publishers and readers have already been publishing four editions in Malaga 451: La noche de los
@@ -40,7 +40,7 @@
         through a large exhibition in which his widow, Maria Kodama, collaborated. There is nothing. If you are a
         lover of the novel, poetry, comics or essay, you can enjoy that magical night for free! Do you think about
         losing it?</p>
-        <a href="https://www.latermicamalaga.com/malaga451/">More info</a>
+        <a class="link-info" href="https://www.latermicamalaga.com/malaga451/">More info</a>
     <h2>Festival of Fantasy of Fuenlabrada (Fuenlabrada, Madrid)</h2>
     <p>If you have a predilection for the fantastic genre , you will love the Fuenlabrada Fantasy Festival. And as
         every year they focus on a theme (epic fantasy,  steampunk , the world of comics), they always want to return.
@@ -48,7 +48,7 @@
         round tables, market troll, contest of illustration and stories and role-playing games are some of the many
         activities that are carried out in this literary festival free and free entry, which perfectly combines the
         didactic part with the playful.</p>
-        <a href="https://fffoficial.com/">More info</a>
+        <a class="link-info" href="https://fffoficial.com/">More info</a>
     <h2>Ene Festival (Madrid)</h2>
     <p>The Ene Festival is one of the most popular free literary festivals. In its last edition, held from October 15
         to 25, it exceeded fourteen thousand attendees, so imagine. In 2018, Malaga joined as host, and hosted this
@@ -59,7 +59,7 @@
         loved to see Samanta Schweblin , Rosa Montero, Elvira Lindo, Gioconda Belli and Almudena Grandes. And the entrance
         is free (until full capacity) to enjoy such a team! I have no choice but to aim the Ene Festival on the list of
         free literary festivals that I have to attend at least once.</p>
-        <a href="http://revistaparaleer.com/festival-ene//">More info</a>
+        <a class="link-info" href="http://revistaparaleer.com/festival-ene//">More info</a>
     <h2>Golem Fest (Valencia, Valencian Community)</h2>
     <p>Golem Fest is a newborn free literary festival and I was lucky to attend its first edition. This festival focused
         on fantasy, horror and science fiction, but its programming could delight any reader and film buff (the seventh
@@ -72,7 +72,7 @@
         bosque profundo and told Elia Barcelo (another author of national literature) that she had read my blog and that
         she is very pimp. And what do you want me to tell you, one has a little heart, and hearing such things encourages
         you to keep working.</p>
-        <a href="https://golemfest.es/">More info</a>
+        <a class="link-info" href="https://golemfest.es/">More info</a>
     <h2>ENDEI: National Meeting of Independent Publishers (Castellon de la Plana, Comunidad Valenciana)</h2>
     <p>ENDEI was my first free literary festival. I attended its second edition, back in 2016, and I participated in its
         speed datings with editors to present my novel. Although I made a staging the sea of ​​pestle , I could not get any
@@ -83,7 +83,7 @@
     <p>The 2019 edition, which will be the fifth edition, will be held from March 14 to 16 in Castellon . Admission is
         free and free, but to participate in speed datings , whether as a writer, proofreader , translator or illustrator,
         you must sign up. If you are interested, run !, because the registration closes next March 4 .</p>
-        <a href="http://endei.es/">More info</a>
+        <a class="link-info" href="http://endei.es/">More info</a>
     </section>
 </article>
 </body>
