fixed marker issue3

--- a/shops.html
+++ b/shops.html
@@ -82,7 +82,7 @@
 
         function showOnMap(latitude, longitude){
 
-            if (marker !== null) {
+            if (marker !== undefined) {
                 marker.setMap(null);
             }
 
