--- a/booksAll.html
+++ b/booksAll.html
@@ -23,6 +23,7 @@
     <div ondragover="operationDragAndDropCurrent.allowDrop(event)" ondrop="operationDragAndDropCurrent.drop(event)">
         <img id="heart" src="static/img/heart.png" alt="heart">
     </div>
+    <a class="logout" href="index.html">Log out</a>
 </div>
 <article class="container">
 <h1>All Books</h1>
