--- a/shops.html
+++ b/shops.html
@@ -120,6 +120,7 @@
     <a href="events.html">Events</a>
     <a class="active" href="shops.html">Shops</a>
     <a href="guide.html">Guide</a>
+    <a class="logout" href="index.html">Log out</a>
 </div>
 <article class="container">
     <h1>Shops & Location</h1>
