--- a/clasics.html
+++ b/clasics.html
@@ -17,6 +17,7 @@
     <a href="events.html">Events</a>
     <a href="shops.html">Shops</a>
     <a href="guide.html">Guide</a>
+    <a class="logout" href="index.html">Log out</a>
 </div>
 <article class="container">
 <h1>Popular Classic Books</h1>
