--- a/events.html
+++ b/events.html
@@ -17,6 +17,7 @@
     <a class="active" href="events.html">Events</a>
     <a href="shops.html">Shops</a>
     <a href="guide.html">Guide</a>
+    <a class="logout" href="index.html">Log out</a>
 </div>
 <article class="container">
     <h1>Literary Events</h1>
